===============
lmirror changes
===============

NEXT (in development)
=====================

Changes
+++++++

* Added lmirror script and setup.py to install lmirror.

* Added lmirror init command which creates a simple mirror set and makes an
  initial journal.

* Added lmirror finish-change command which finishes an open change.

* Fixed command lookup for finish-change so that it can be used.

* Added lmirror start-change command which opens a change, permitting clients
  to not fail fatally when content is mismatched, but instead take a sensible
  action (such as pausing, spinning on the metadata, or rolling back quietly).

* Fixed finish-change not to write a journal if there are no changes to
  propogate.

* Added lmirror mirror command to perform a mirror run.

* Parsing PATH arguments which are not local no longer causes a traceback. 
  (Robert Collins, #542413)

* CLI UI can now log messages to ~/.cache/lmirror/log, and to the console.

* -v will now increase verbosity for all commands. In particular this causes
  mirror and finish-change to list all the changes they discover/transmit.

* .lmirror/sets/<name>/content.conf is now parsed to get include/exclude rules.

API Changes
+++++++++++

* New test helper logging_resource for working with the logging module.

* New module ``l_mirror.logging_support`` containing glue to get logging up and
  running.